<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.3.1.RELEASE</version>
    <relativePath />
  </parent>
  <groupId>org.hihn.ampd</groupId>
  <artifactId>ampd</artifactId>
  <version>1.2.1-SNAPSHOT</version>
  <name>ampd</name>
  <description>Spring Boot server for the ampd-client</description>
  <properties>
    <mpir.skip>true</mpir.skip>
    <java.version>11</java.version>
    <project.scm.id>github</project.scm.id>
    <frontend.prod>true</frontend.prod>
    <frontend.url>localhost</frontend.url>
    <frontend.https>false</frontend.https>
    <frontend.context>/</frontend.context>
    <skip.npm>false</skip.npm>
    <skip.npm.warnings>true</skip.npm.warnings>
  </properties>
  <scm>
    <url>https://github.com/rain0r/ampd</url>
    <connection>scm:git:https://github.com/rain0r/ampd.git</connection>
    <developerConnection>scm:git:https://github.com/rain0r/ampd.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-websocket</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.hihn</groupId>
      <artifactId>javampd</artifactId>
      <version>6.1.15</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>net.jcip</groupId>
      <artifactId>jcip-annotations</artifactId>
      <version>1.0</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-annotations</artifactId>
      <version>4.0.6</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.hihn</groupId>
      <artifactId>musicbrainzws2-java</artifactId>
      <version>3.0.15</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>2.3.1.RELEASE</version>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>true</executable>
          <embeddedLaunchScriptProperties>
            <pidFolder>/tmp/</pidFolder>
            <pidFilename>ampd-server</pidFilename>
            <stopWaitTime>5</stopWaitTime>
          </embeddedLaunchScriptProperties>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.springframework.boot.experimental</groupId>
            <artifactId>spring-boot-thin-layout</artifactId>
            <version>1.0.25.RELEASE</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>${java.version}</release>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>npm install</id>
            <phase>compile</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <skip>${skip.npm}</skip>
              <executable>npm</executable>
              <workingDirectory>./angularclient</workingDirectory>
              <arguments>
                <argument>install</argument>
              </arguments>
            </configuration>
          </execution>
          <execution>
            <id>Build fronted</id>
            <phase>compile</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <skip>${skip.npm}</skip>
              <executable>node</executable>
              <workingDirectory>./angularclient</workingDirectory>
              <arguments>
                <argument>build.js</argument>
                <argument>--prod=${frontend.prod}</argument>
                <argument>--url=${frontend.url}</argument>
                <argument>--https=${frontend.https}</argument>
                <argument>--context=${frontend.context}</argument>
              </arguments>
            </configuration>
          </execution>
          <execution>
            <id>npm report</id>
            <phase>compile</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <skip>${skip.npm.warnings}</skip>
              <executable>npm</executable>
              <workingDirectory>./angularclient</workingDirectory>
              <arguments>
                <argument>run</argument>
                <argument>warnings</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.9.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.0.4</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <configLocation>${project.resources[0].directory}/ampd_google_checks.xml</configLocation>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>checkstyle</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.0.0</version>
      </plugin>
    </plugins>
  </reporting>
</project>
